[package]
name = "profiling2-wasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
console_error_panic_hook = "0.1.7"
flate2 = "1.0.25"
nom = "7.1.3"
thiserror = "1.0.40"
wasm-bindgen = "0.2.84"
web-sys = {version = "0.3.61", features = ["Blob", "FileReaderSync"]}

[profile.release]
opt-level = "s"
