[package]
name = "profiling2-wasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
bitvec = "1.0.1"
bitvec-nom = "0.2.0"
console_error_panic_hook = "0.1.7"
flate2 = "1.0.25"
nom = "7.1.3"
num-derive = "0.3.3"
num-traits = "0.2.15"
thiserror = "1.0.40"
wasm-bindgen = "0.2.84"
web-sys = {version = "0.3.61", features = ["Blob", "FileReaderSync"]}

[profile.release]
opt-level = "s"

[dev-dependencies]
map-macro = "0.2.6"
pretty_assertions = "1.3.0"
