[package]
name = "profiling2-wasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
bitvec = "1.0.1"
bitvec-nom = "0.2.0"
console_error_panic_hook = "0.1.7"
fastrand = "1.9.0"
flate2 = "1.0.25"
js-sys = "0.3.61"
nom = "7.1.3"
num-derive = "0.3.3"
num-traits = "0.2.15"
ouroboros = "0.15.6"
serde = { version = "1.0.160", features = ["derive"] }
serde-wasm-bindgen = "0.5.0"
thiserror = "1.0.40"
wasm-bindgen = "0.2.84"
web-sys = {version = "0.3.61", features = []}
serde-savedvariables = { path = "crates/serde-savedvariables" }
serde-libserialize = { path = "crates/serde-libserialize" }

[profile.release]
debug = true

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O4", "-g"]

[dev-dependencies]
criterion = "0.4.0"
map-macro = "0.2.6"
pretty_assertions = "1.3.0"

[[bench]]
name = "apr22_data"
harness = false

[workspace]
members = ["crates/*", "."]
