[package]
name = "serde-savedvariables"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "7.1.3"
serde = {version = "1.0.160", features=["alloc"]}
thiserror = "1.0.40"

[dev-dependencies]
pretty_assertions = "1.3.0"
map-macro = "0.2.6"
serde = {version = "1.0.160", features=["alloc", "derive"]}
